@@ -1,0 +1,4 @@
+Org, Targeted, Sector 1, Sector 2
+#org, #targeted, #sector+list, #sector+list
+NGO A, 200, WASH, 
+NGO C, 500, Health, Food
