@@ -1,0 +1,4 @@
+Org, Targeted, Sector 1, Sector 2
+#org, #targeted, #sector+list, #sector+list
+NGO A, 300, Education, 
+NGO C, 100, Protection, Food
